namespace MarsRover.Models.Elementals;
public enum VehicleMovementStatus
{
    NoMovement,
    DangerAhead,
    ReachedDestination
}
