namespace MarsRover.Models.Instructions;

public enum SingularInstruction
{
    TurnLeft,
    TurnRight,
    MoveForward
}
